--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <!-- Masthead-->
     <header class="masthead bg-primary text-white text-center">
         <div class="container d-flex align-items-center flex-column">
-            <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="/css/LOGO_WHITE.png" alt="https://cdn.discordapp.com/attachments/709838595774611488/761638932362297364/LOGO_WHITE.png" />
+            <!-- Masthead Avatar Image--><img class="masthead-avatar mb-5" src="https://cdn.discordapp.com/attachments/709838595774611488/761638932362297364/LOGO_WHITE.png" alt="Logo 3QRP" />
             <!-- Masthead Heading-->
             <h1 class="masthead-heading text-uppercase mb-0">Three Queens RolePlay</h1>
             <!-- Icon Divider-->
@@ -242,7 +242,7 @@
                 <!-- Footer About Text-->
                 <div class="col-lg-4">
                     <h4 class="text-uppercase mb-4">Parcerias</h4>
-                    <p class="lead mb-0"><a href="https://ftw.pt/"><img src="/css/logoFTW.png" alt="https://cdn.discordapp.com/attachments/709838595774611488/761638972589473853/logoFTW.png"></a></p>
+                    <p class="lead mb-0"><a href="https://ftw.pt/"><img src="https://cdn.discordapp.com/attachments/709838595774611488/761638972589473853/logoFTW.png" alt="Logo FTW"></a></p>
                 </div>
             </div>
         </div>
